tests/reference/asr-dimension_01-2172e76.stderr
semantic error: Expecting a scalar integer or parameter annotated integer variable 
 --> tests/errors/dimension_01.f90:2:24
  |
2 |     integer, dimension("abcd") :: line
  |                        ^^^^^^ 
